processed/jira/txt/LU/LU-13743.txt
Key:        LU-13743
Summary:    Build breaks with 5.4+ and CONFIG_FS_ENCRYPTION not set
Link:       https://jira.whamcloud.com/browse/LU-13743
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Thu, 2 Jul 2020 06:03:21 +0000
Updated:    Fri, 11 Oct 2024 13:15:57 +0000
Resolved:   Wed, 8 Mar 2023 20:29:09 +0000

--- Description ---
/home/shaun/lustre-release/lustre/include/lustre_crypto.h:44:28: error: variable ‘lustre_cryptops’ has initializer but incomplete type
 #define llcrypt_operations fscrypt_operations
                            ^
/home/shaun/lustre-release/lustre/llite/crypto.c:136:14: note: in expansion of macro ‘llcrypt_operations’
 const struct llcrypt_operations lustre_cryptops = {
              ^
/home/shaun/lustre-release/lustre/llite/crypto.c:137:2: error: unknown field ‘key_prefix’ specified in initializer
  .key_prefix  = "lustre:",

--- Comment (spitzcor, Wed, 8 Mar 2023 20:29:09 +0000) ---
Landed for 2.16.0

--- Comment (gerrit, Wed, 8 Mar 2023 03:26:48 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/39243/

Subject: LU-13743 build: Explicitly require encryption support

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 068e5f13fb94802ced68712ee11e7f9cb106d0ae

--- Comment (gerrit, Thu, 2 Jul 2020 06:16:25 +0000) ---
Shaun Tancheff (shaun.tancheff@hpe.com) uploaded a new patch: https://review.whamcloud.com/39243

Subject: LU-13743 build: Fix 5.4 kernel without FS_ENCRYPTION

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 29e7830e4f813291990cdd2c87d0dfcd43018a2a
